[metadata]
name = CacheML
version = attr: cacheml.__version__
author = Benedat LLC
author_email = jeff.fischer@benedat.com
description = Cache ML -- layer on top of joblib to cache parsed datasets, dramatically reducing load time of large data files. Also supports encryption at rest.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/BenedatLLC/CacheML
classifiers =
    Programming Language :: Python :: 3 :: Only
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Utilities
    Topic :: Scientific/Engineering :: Information Analysis

[options]
python_requires = >=3.6
packages = find:
include_package_data = True
install_requires =
    joblib
    s3fs
    pycryptodome
    click

